--- a/RoomManager/FormTask/frmTsk_Payment_Step2.resx
+++ b/RoomManager/FormTask/frmTsk_Payment_Step2.resx
@@ -118,6 +118,49 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnAddService.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACF0RVh0VGl0
+        bGUAUGFzdGU7QmFycztSaWJib247U3RhbmRhcmQ7JZsHnQAAAplJREFUOE91k+tLU2Ecxw/Vi6S7/h+9
+        KIKiFxG+keiFEJi2LHU1yCabm7c2ly4tJpq3ErvQC52zmZk63c5yzgiVslV0UcNGUeBl0zbndFfdvj3P
+        mTs0aA98OBwevp/f7/md8zAAmDjqZhNDsKpbTKhuNqGq0QhVgwEydY9VrOhgyo+ncPyb4V/szwTWV81n
+        SGgYS651mKd+wvj2BwwTduRJ2/FCeRIz2ixrUsGcPgdL9lGUVjQiX/oYgsL7yLrShMxcDYRXlfg62o6J
+        xgwkFXzTZSPosuGTQQ629TzYe9kYacuB9aEAU9oCTPdfg6X2dHLBdEcWtjw2BH+1wWm7hTlWRijGd1YK
+        u5nASmC5nQ6GYVK22U2eO/gZfH5yDpuuSQTsTfDO1EF114rKBguU9SO4UfcS5YQyDYuSOybIa4worhmK
+        yeIT/fAgE2HnGPyzGrg/qknQQrb+v8JbEUjUg1Swlxe8az2L8KIJG1/UWJlSoEJj5tIeXxirvhCHeyME
+        13oIfwjim/1UsI8XTNZnIPi7D973CjjH5SgjrdLlTggGseKlBFCoeE4F+3nB69p0+O1dWHsjh2NMDHnt
+        MKJUQKpxVb0hLry8FoDTE4CovJcKDvCCUdUp+GYfwTMuxoJZBGm1AZFolLQbq8oFCQ4SdqwGICzVU8FB
+        XmAuO0HO3wL3mAjzxjwUVQ1gKxLFMmnXuRbkqjo8fiyt+rFIyJN1U8EhXjAkOcYOio9i4PoRdAsPo7Cy
+        D3TasWCABCkk7PZjwe1DrqSLClITLkb8k9Lpiip6EdyMcO3SivHgvMsHysUiLRWkJRPsEZb2oKBEj3zZ
+        U1wu1uGSVEeqarmgoKgTF8SdiUNMuKIMs5P7SeiQ6DljpG6TxlWO7e36C4iou1a3PvxTAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
+  <data name="btnDeleteService.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACN0RVh0VGl0
+        bGUAQ2FuY2VsO1N0b3A7RXhpdDtCYXJzO1JpYmJvbjtMlpayAAADk0lEQVQ4TzWTfUxTVxjG7/yY4irb
+        4nSR0WWgLSIWirRrQQ2lSoVC3eCPsWnUbM4JKGUhZAYmEzM2rCRuCmQkyBZwIkj5cAq1WjVzmyyjuFJg
+        sx0I8iFCe1ughTZM8+ycS3aT382T9+M577m5L+MxNTGeu62M995VhjxLf806LLLl55Y/Op5nGSnIf0ah
+        +q88baXhowNiUrOM8ILHpGdmjY0MQwUNEJZbtdkFQ59/5p+6cB7ullp47rbBS3C31GGyphzDJ477zUeP
+        FJHalYQlnAFt1splvP5j2aaR0mJ4brdgpuMipltr4GqshKuhEu7makxfqwM5DKNnvkTvsayfNWHCV6kJ
+        NVhm/vjQd0MlRaTxEiz5OagOEcGYlgZn3Vk4a8/iVno6F7PkHeWMhr8uxu+HPrzMTdKWnia1ZmU+Y/Xf
+        40FuJmpV78HUYUZDZiE61KkwpGg4bWrv4nLmnE/gulINa07285qkpHjGlKqpGvzqBJ5WlaKaH45H9nE4
+        XPOwD7Fo1J7ieEj0hNOLAds4VzNRUYLBU4UwJKfomVu71QP2Ix9gULsPNzXv4A/dN/DO/wvnjA+2xyxs
+        wyympn2YnVvgckbNHgxkZ8B2OAM3VcmPmRsK1cLfGYnof3cb7AfJyDt3olN3DpNuHybJJE/dBNaH30q/
+        hUGpxMP9yehLjUVfejwMisQF5qo8fsGS9DZ61TL074nDdclWGE+eISPP44lzDuMOL2EeN4p0uB6zFb0p
+        clh3S9GjkoD2MvVi+XCXcjHQHrUFzZ8Wo/cfB8amvGBnfWBn/BiZ9KLHPgV97km0R0bAsisaXQox6qNk
+        40yVUPyDaZsMFqUYl0KEcE44MeaYg2vWj55zFRyLJh44nji5mj/jI3EnToIKQVQbkx8UuuNiePRz8/Yt
+        uK+U4/b+g/CzLB7oymCUxRAknKYxmrufIEN3XAR+3CRGzutvqemPFFD2hvDylbDNsCREoTNBiiZhGEyy
+        aPJd5NydqaaxToUUFkUk9GHhOL1eQJdnNTVYsnnFqrVl6zZ014cKYN4hIk2x6EmUoDs2nLCJ3DkGfepY
+        dG8XoWGDAKfXhVpFK17i0+VjRnP3clsY8yJvffHL/MbytSFoEYTinngjuqTEkPAL0a0kVkFyX7zC/yli
+        ecCbdAVGtO8zDH1xYnExeAdWvaYq5AU1lQQGj+oC+dAFBqNkdfBYAS+oeV/AGg2pCaQH/t/3H3WRRtfA
+        AwjPAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="cbbPriceType.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="btnPrintListCus.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAx0RVh0VGl0
@@ -188,46 +231,6 @@
         n9p5sibt9QQlwZvq0ZoVwATbVgWqnMPg/4yQpBP8HDGrBT/TQakh2qlWEyqiDfy0CgNVsf8I3F6l+nGt
         Wf42szKTyPAnRFCmU6aL0JImwrs0P7TcWKEuwbd37X/ATqI7sZVti9i+hh1Ur2Wnvfdgp5e9wl/Okl4i
         FaARDQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnAddService.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACF0RVh0VGl0
-        bGUAUGFzdGU7QmFycztSaWJib247U3RhbmRhcmQ7JZsHnQAAAplJREFUOE91k+tLU2Ecxw/Vi6S7/h+9
-        KIKiFxG+keiFEJi2LHU1yCabm7c2ly4tJpq3ErvQC52zmZk63c5yzgiVslV0UcNGUeBl0zbndFfdvj3P
-        mTs0aA98OBwevp/f7/md8zAAmDjqZhNDsKpbTKhuNqGq0QhVgwEydY9VrOhgyo+ncPyb4V/szwTWV81n
-        SGgYS651mKd+wvj2BwwTduRJ2/FCeRIz2ixrUsGcPgdL9lGUVjQiX/oYgsL7yLrShMxcDYRXlfg62o6J
-        xgwkFXzTZSPosuGTQQ629TzYe9kYacuB9aEAU9oCTPdfg6X2dHLBdEcWtjw2BH+1wWm7hTlWRijGd1YK
-        u5nASmC5nQ6GYVK22U2eO/gZfH5yDpuuSQTsTfDO1EF114rKBguU9SO4UfcS5YQyDYuSOybIa4worhmK
-        yeIT/fAgE2HnGPyzGrg/qknQQrb+v8JbEUjUg1Swlxe8az2L8KIJG1/UWJlSoEJj5tIeXxirvhCHeyME
-        13oIfwjim/1UsI8XTNZnIPi7D973CjjH5SgjrdLlTggGseKlBFCoeE4F+3nB69p0+O1dWHsjh2NMDHnt
-        MKJUQKpxVb0hLry8FoDTE4CovJcKDvCCUdUp+GYfwTMuxoJZBGm1AZFolLQbq8oFCQ4SdqwGICzVU8FB
-        XmAuO0HO3wL3mAjzxjwUVQ1gKxLFMmnXuRbkqjo8fiyt+rFIyJN1U8EhXjAkOcYOio9i4PoRdAsPo7Cy
-        D3TasWCABCkk7PZjwe1DrqSLClITLkb8k9Lpiip6EdyMcO3SivHgvMsHysUiLRWkJRPsEZb2oKBEj3zZ
-        U1wu1uGSVEeqarmgoKgTF8SdiUNMuKIMs5P7SeiQ6DljpG6TxlWO7e36C4iou1a3PvxTAAAAAElFTkSu
-        QmCC
-</value>
-  </data>
-  <data name="btnDeleteService.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACN0RVh0VGl0
-        bGUAQ2FuY2VsO1N0b3A7RXhpdDtCYXJzO1JpYmJvbjtMlpayAAADk0lEQVQ4TzWTfUxTVxjG7/yY4irb
-        4nSR0WWgLSIWirRrQQ2lSoVC3eCPsWnUbM4JKGUhZAYmEzM2rCRuCmQkyBZwIkj5cAq1WjVzmyyjuFJg
-        sx0I8iFCe1ughTZM8+ycS3aT382T9+M577m5L+MxNTGeu62M995VhjxLf806LLLl55Y/Op5nGSnIf0ah
-        +q88baXhowNiUrOM8ILHpGdmjY0MQwUNEJZbtdkFQ59/5p+6cB7ullp47rbBS3C31GGyphzDJ477zUeP
-        FJHalYQlnAFt1splvP5j2aaR0mJ4brdgpuMipltr4GqshKuhEu7makxfqwM5DKNnvkTvsayfNWHCV6kJ
-        NVhm/vjQd0MlRaTxEiz5OagOEcGYlgZn3Vk4a8/iVno6F7PkHeWMhr8uxu+HPrzMTdKWnia1ZmU+Y/Xf
-        40FuJmpV78HUYUZDZiE61KkwpGg4bWrv4nLmnE/gulINa07285qkpHjGlKqpGvzqBJ5WlaKaH45H9nE4
-        XPOwD7Fo1J7ieEj0hNOLAds4VzNRUYLBU4UwJKfomVu71QP2Ix9gULsPNzXv4A/dN/DO/wvnjA+2xyxs
-        wyympn2YnVvgckbNHgxkZ8B2OAM3VcmPmRsK1cLfGYnof3cb7AfJyDt3olN3DpNuHybJJE/dBNaH30q/
-        hUGpxMP9yehLjUVfejwMisQF5qo8fsGS9DZ61TL074nDdclWGE+eISPP44lzDuMOL2EeN4p0uB6zFb0p
-        clh3S9GjkoD2MvVi+XCXcjHQHrUFzZ8Wo/cfB8amvGBnfWBn/BiZ9KLHPgV97km0R0bAsisaXQox6qNk
-        40yVUPyDaZsMFqUYl0KEcE44MeaYg2vWj55zFRyLJh44nji5mj/jI3EnToIKQVQbkx8UuuNiePRz8/Yt
-        uK+U4/b+g/CzLB7oymCUxRAknKYxmrufIEN3XAR+3CRGzutvqemPFFD2hvDylbDNsCREoTNBiiZhGEyy
-        aPJd5NydqaaxToUUFkUk9GHhOL1eQJdnNTVYsnnFqrVl6zZ014cKYN4hIk2x6EmUoDs2nLCJ3DkGfepY
-        dG8XoWGDAKfXhVpFK17i0+VjRnP3clsY8yJvffHL/MbytSFoEYTinngjuqTEkPAL0a0kVkFyX7zC/yli
-        ecCbdAVGtO8zDH1xYnExeAdWvaYq5AU1lQQGj+oC+dAFBqNkdfBYAS+oeV/AGg2pCaQH/t/3H3WRRtfA
-        AwjPAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnEditCustomer.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
